SERVER-31295 SERVER-31489 Allow applyOps to rollback without UUID